# plastic

./: .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  config.ini  dev.Dockerfile  docker-compose.yml  logging_config.json  mix.exs  piccolo_conf.py  prod.Dockerfile  prod.docker-compose.yml  pyproject.toml
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: plastic.ex  plastic_web.ex
lib/plastic/: application.ex  mailer.ex  repo.ex
lib/plastic_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/plastic_web/components/: core_components.ex  layouts.ex
lib/plastic_web/components/layouts/: root.html.heex
lib/plastic_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
main_app/: db_models.py  logging_configurator.py  main.py  piccolo_app.py  redis_client.py  schemas.py  send_mail.py
main_app/api/api_admin/: router.py
main_app/api/api_v1/: router.py
main_app/api/api_v1/endpoints/: calculatePrice.py  submitOrder.py
priv/repo/: seeds.exs
static/: script.js  snorlax.stl  styles.css
templates/: 3drender.html.jinja  base.html.jinja  calculator.html.jinja  footer.html.jinja  index.html.jinja  information.html.jinja  order_success.html.jinja  result.html.jinja  shop.html.jinja  top_bar.html.jinja
templates/old/: calculator-old.html.jinja
test/: test_helper.exs
test/plastic_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex  data_case.ex
